--- a/md4_b1/src/main/webapp/WEB-INF/views/player/list.html
+++ b/md4_b1/src/main/webapp/WEB-INF/views/player/list.html
@@ -25,7 +25,7 @@
         </tr>
         </thead>
         <tbody>
-        <tr th:each="player, status : ${playerList}">
+        <tr th:each="player, status : ${players}">
             <td th:text="${status.index + 1}"></td>
             <td th:text="${player.playerCode}"></td>
             <td th:text="${player.fullName}"></td>
